@@ -170,13 +170,17 @@ static Image *ReadLABELImage(const ImageInfo *image_info,
   if (image->columns == 0)
     image->columns=(size_t) (metrics.width+draw_info->stroke_width+1.5);
   if (image->columns == 0)
-    image->columns=(size_t) (draw_info->pointsize+
-      draw_info->stroke_width+1.5);
-  if (draw_info->gravity == UndefinedGravity)
+    image->columns=(size_t) (draw_info->pointsize+draw_info->stroke_width+1.5);
+  if ((draw_info->gravity == UndefinedGravity) ||
+      (draw_info->direction == RightToLeftDirection))
     {
       (void) FormatLocaleString(geometry,MaxTextExtent,"%+g%+g",
         -metrics.bounds.x1+draw_info->stroke_width/2.0,metrics.ascent+
         draw_info->stroke_width/2.0);
+      if (draw_info->direction == RightToLeftDirection)
+        (void) FormatLocaleString(geometry,MaxTextExtent,"%+g%+g",
+          image->columns-(metrics.bounds.x2+draw_info->stroke_width/2.0),
+          metrics.ascent+draw_info->stroke_width/2.0);
       draw_info->geometry=AcquireString(geometry);
     }
   if (image->rows == 0)
